--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ tr:nth-child(even) {
     <th>chairaa06</th>
   </tr>
   <tr>
-    <td>Nama Member Ke-1</td>
-    <td>Nama Akun</td>
-    <td>Nama Akun</td>
+    <td>Aisyah Indriani Rachmat</td>
+    <td>Aisyah Indriani Rachmat</td>
+    <td>aisyahindrianirachmat</td>
   </tr>
   <tr>
     <td>Nama Member ...</td>
