--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ tr:nth-child(even) {
     <td>aisyahindrianirachmat</td>
   </tr>
   <tr>
-    <td>Nama Member ...</td>
-    <td>Nama Akun</td>
-    <td>Nama Akun</td>
+    <td>Ihsan Maulana</td>
+    <td>Ihsan Maulana</td>
+    <td>ihsanmly</td>
   </tr>
   <tr>
     <td>Nama Member Ke-n</td>
