--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ tr:nth-child(even) {
     <td>ihsanmly</td>
   </tr>
   <tr>
-    <td>Nama Member Ke-n</td>
-    <td>Nama Akun</td>
-    <td>Nama Akun</td>
+    <td>Maulydio Utama</td>
+    <td>Maulydio Utama</td>
+    <td>maulydiou</td>
   </tr>
 </table>
 </body>
