Menambahkan nama member

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@ tr:nth-child(even) {
     <td>Maulydio Utama</td>
     <td>maulydiou</td>
   </tr>
+  <tr>
+    <td>Muhammad Faris Tsany Adnandhika</td>
+    <td>Muhammad Faris Tsany Adnandhika</td>
+    <td>faris.ts</td>
+  </tr>
 </table>
 </body>
 </html>
