--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ tr:nth-child(even) {
     <td>Muhammad Faris Tsany Adnandhika</td>
     <td>faris.ts</td>
   </tr>
-</table>
-</body>
-</html>
+  <cr>
+    <td>Tita Yunita</td>
+    <td>Tita Yunia</td>
+    <td>titayunita_</td>
