--- a/index.html
+++ b/index.html
@@ -51,5 +51,5 @@ tr:nth-child(even) {
   </tr>
   <cr>
     <td>Tita Yunita</td>
-    <td>Tita Yunia</td>
+    <td>Tita Yunita</td>
     <td>titayunita_</td>
