--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ tr:nth-child(even) {
 
 <table>
   <tr>
+    <th>Nama Member</th>
+    <th>LinkedIn</th>
+    <th>Instagram</th>
+  </tr>
+  <tr>
     <th>Chaira Fadlika</th>
     <th>Chaira Fadlika</th>
     <th>chairaa06</th>
@@ -49,7 +54,11 @@ tr:nth-child(even) {
     <td>Muhammad Faris Tsany Adnandhika</td>
     <td>faris.ts</td>
   </tr>
-  <cr>
+  <tr>
     <td>Tita Yunita</td>
     <td>Tita Yunita</td>
     <td>titayunita_</td>
+  </tr>
+</table>
+</body>
+</html>
