--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ tr:nth-child(even) {
     <th>Instagram</th>
   </tr>
   <tr>
-    <th>Chaira Fadlika</th>
-    <th>Chaira Fadlika</th>
-    <th>chairaa06</th>
+    <td>Chaira Fadlika</td>
+    <td>Chaira Fadlika</td>
+    <td>chairaa06</td>
   </tr>
   <tr>
     <td>Aisyah Indriani Rachmat</td>
